# cargo-metadata

./: Cargo.toml  README.md
src/: main.rs
src/ops/: cargo_output_metadata.rs
